--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="css/home.css" />
   </head>
   <body>
-    <!-- Start Navbar -->
+    <!-- Start Header -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand ms-4" href="#">
@@ -72,8 +72,29 @@
         </div>
       </div>
     </nav>
-    <!-- End Navbar -->
+    <!-- End Header -->
+
+    <!-- Start Header -->
+    <header>
+      <div class="container">
+        <div class="text">
+          <h1>Flutter</h1>
+          <p class="fs-3 mt-2">
+            كورسات فلاتر
+            <br />
+            مقالات باللغة العربية
+          </p>
+        </div>
+        <svg class="chevron-icon" xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-chevron-double-down" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+          <path fill-rule="evenodd" d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+        </svg>
+      </div>
+    </header>
+    <!-- End Header -->
   </body>
+
+
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
