Section Video in Youtube

--- a/home.html
+++ b/home.html
@@ -92,6 +92,81 @@
       </div>
     </header>
     <!-- End Header -->
+    
+    <!-- Start Section Video -->
+    <section class="video-youtube">
+      <div class="title-section text-center">
+        <h2>أشهر الفيديوهات على قناة عمرو جمال</h2 class=''>
+      </div>
+      <div class="row mt-5">
+        <div class="col-sm-12 col-md-3 mb-5 card-item">
+          <div class="card" style="width: 15rem">
+            <img src="./assets/img-youtube/img-1.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">مسار تعلم برمجة تطبيقات الموبيل للاندرويد والايفون | | ازاي تتعلم تطوير تطبييقات الموبيل</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-3 mb-5 card-item">
+          <div class="card" style="width: 15rem">
+            <img src="./assets/img-youtube/img-1.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">مسار تعلم برمجة تطبيقات الموبيل للاندرويد والايفون | | ازاي تتعلم تطوير تطبييقات الموبيل</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-3 mb-5 card-item">
+          <div class="card" style="width: 15rem">
+            <img src="./assets/img-youtube/img-1.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">مسار تعلم برمجة تطبيقات الموبيل للاندرويد والايفون | | ازاي تتعلم تطوير تطبييقات الموبيل</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-3 mb-5 card-item">
+          <div class="card" style="width: 15rem">
+            <img src="./assets/img-youtube/img-1.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">مسار تعلم برمجة تطبيقات الموبيل للاندرويد والايفون | | ازاي تتعلم تطوير تطبييقات الموبيل</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-3 mb-5 card-item">
+          <div class="card" style="width: 15rem">
+            <img src="./assets/img-youtube/img-1.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">مسار تعلم برمجة تطبيقات الموبيل للاندرويد والايفون | | ازاي تتعلم تطوير تطبييقات الموبيل</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-3 mb-5 card-item">
+          <div class="card" style="width: 15rem">
+            <img src="./assets/img-youtube/img-1.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">مسار تعلم برمجة تطبيقات الموبيل للاندرويد والايفون | | ازاي تتعلم تطوير تطبييقات الموبيل</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-3 mb-5 card-item">
+          <div class="card" style="width: 15rem">
+            <img src="./assets/img-youtube/img-1.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">مسار تعلم برمجة تطبيقات الموبيل للاندرويد والايفون | | ازاي تتعلم تطوير تطبييقات الموبيل</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-3 mb-5 card-item">
+          <div class="card" style="width: 15rem">
+            <img src="./assets/img-youtube/img-1.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">مسار تعلم برمجة تطبيقات الموبيل للاندرويد والايفون | | ازاي تتعلم تطوير تطبييقات الموبيل</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Section Video -->
+
   </body>
 
 
