Section About-us

--- a/home.html
+++ b/home.html
@@ -92,7 +92,7 @@
       </div>
     </header>
     <!-- End Header -->
-    
+
     <!-- Start Section Video -->
     <section class="video-youtube">
       <div class="title-section text-center">
@@ -166,6 +166,41 @@
       </div>
     </section>
     <!-- End Section Video -->
+
+        <!-- Start Section About Us -->
+    <section class="about-us pt-5 pb-5">
+      <div class="container">
+        <div class="card mb-3 border-0">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="./assets/image-persone.jpg" class="img-fluid rounded-start" alt="image-persone">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title fs-1">من نحن؟</h5>
+                <p class="card-text">
+                  دروس أونلاين هي مشروع تعليمي قائم على مشاركة المعارف والتجارب التي أمر بها.                  <br/>
+                  دروس أونلاين هي مشروع تعليمي قائم على مشاركة المعارف والتجارب التي أمر بها.                  <br/>
+                  دروس أونلاين هي مشروع تعليمي قائم على مشاركة المعارف والتجارب التي أمر بها.                  <br/>
+                  دروس أونلاين هي مشروع تعليمي قائم على مشاركة المعارف والتجارب التي أمر بها.                  <br/>
+                   دروس أونلاين هي مشروع تعليمي قائم على مشاركة المعارف والتجارب التي أمر بها.                  <br/>
+                  دروس أونلاين هي مشروع تعليمي قائم على مشاركة المعارف والتجارب التي أمر بها.                  <br/>
+                  دروس أونلاين هي مشروع تعليمي قائم على مشاركة المعارف والتجارب التي أمر بها.                  <br/>
+                  دروس أونلاين هي مشروع تعليمي قائم على مشاركة المعارف والتجارب التي أمر بها.                  <br/>
+                   دروس أونلاين هي مشروع تعليمي قائم على مشاركة المعارف والتجارب التي أمر بها.                  <br/>
+                  دروس أونلاين هي مشروع تعليمي قائم على مشاركة المعارف والتجارب التي أمر بها.                  <br/>
+                  دروس أونلاين هي مشروع تعليمي قائم على مشاركة المعارف والتجارب التي أمر بها.                  <br/>
+                  دروس أونلاين هي مشروع تعليمي قائم على مشاركة المعارف والتجارب التي أمر بها.                  <br/>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Section About Us -->
+
+
 
   </body>
 
