--- a/home.html
+++ b/home.html
@@ -94,7 +94,7 @@
     <!-- End Header -->
 
     <!-- Start Section Video -->
-    <section class="video-youtube">
+    <section class="video-youtube pt-5">
       <div class="title-section text-center">
         <h2>أشهر الفيديوهات على قناة عمرو جمال</h2 class=''>
       </div>
@@ -167,7 +167,7 @@
     </section>
     <!-- End Section Video -->
 
-        <!-- Start Section About Us -->
+    <!-- Start Section About Us -->
     <section class="about-us pt-5 pb-5">
       <div class="container">
         <div class="card mb-3 border-0">
@@ -200,12 +200,35 @@
     </section>
     <!-- End Section About Us -->
 
-
+    <!-- Start Section Staff -->
+    <section class="staff pt-5 pb-5">
+      <div class="container">
+        <div class="title-section text-center">
+          <h2>فريق القناة</h2>
+        </div>
+        <div class="people mt-5">
+          <div class="row justify-content-evenly">
+            <div class="card border-0" style="width: 18rem; background-color: transparent ;">
+              <img src="./assets/stuff/amr.jpg" class="card-img-top rounded-circle" alt="...">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+            <div class="card border-0" style="width: 18rem; background-color: transparent ;">
+              <img src="./assets/stuff/moamen.jpg" class="card-img-top rounded-circle" alt="...">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>        
+          </div>
+        </div>
+      </div>
+    </section>
 
   </body>
 
 
-  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <!-- Bootstrap Bundle with Popper -->
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
