add section footer

--- a/home.html
+++ b/home.html
@@ -252,6 +252,13 @@
     </section>
     <!-- End Section Social-Media -->
 
+    
+    <!-- Start Section Footer -->
+    <footer class="p-4 bg-light text-dark">
+      <p class="text-center fw-bolder m-0">Copyright &copy; 2022 All Reserverd</p>
+    </footer>
+    <!-- End Section Footer -->
+
   </body>
 
 
