--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
     <!-- Start Header -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand ms-4" href="#">
+        <a class="navbar-brand ms-4" href="home.html">
           <img
             src="./assets/amr-white.jpg"
             alt=""
